--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <!-- about section design -->
     <section class="about" id="about">
       <div class="about-img">
-        <img src="./assets/img/kabore 1.jpg" alt="" />
+        <img src="./assets/img/franceline.jpg" alt="" />
       </div>
 
       <div class="about-content">
@@ -153,7 +153,7 @@
  
           <!-- <p><strong>Veuillez cliquez sur le ci-dessous pour suivre nos formations en ligne sur la création de site web avec le langage Phyton, javascript, HTML, CSS.</strong></p> -->
           <p><strong>Veuillez cliquez sur le ci-dessous pour acheter nos produits en ligne.</strong></p>
-          <a href="https://www.localdrive.pro/lafermemaimel-bio/" target="_blank">https://www.localdrive.pro/lafermemaimel-bio/</a><br>
+          <a href="https://www.localdrive.pro/maimel-bio/" target="_blank">https://www.localdrive.pro/maimel-bio/</a><br>
           <!-- <p><strong>Veuillez cliquez sur le ci-dessous pour voir notre logiciel de gestion et comptabilité en ligne.Désormais vous aurez la possibilité de gérer vos entreprises sur vos tablettes et téléphones Android, ios et mac .</strong></p> -->
 
 
